dynamic routes for each card in collection set up

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,7 @@
 @import 'antd/dist/antd.css';
+
+.ui.button.moreButton {
+    border-radius: 18px;
+    width: 200px;
+    background-color:#3865FE;
+  }
