buttons for review or to view album from collection. review sends to database

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,3 +5,14 @@
     width: 200px;
     background-color:#3865FE;
   }
+
+  .vinyl {
+      width: 300px;
+      height: 300px;
+      margin-bottom: 25px;
+  }
+
+  .vinylReview {
+    height: 175px;
+    width: 500px;
+  }
